kubernetes/apps/home-assistant/gazpar2haws-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gazpar2haws
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gazpar2haws
  template:
    metadata:
      labels:
        app: gazpar2haws
    spec:
      containers:
        - name: gazpar2haws
          image: ssenart/gazpar2haws:latest
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
